@@ -222,6 +222,7 @@ div.monthEvent {
   background: #aaaaff;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
+  height: 11.5pt;
 }
 
 
